--- a/Parte 2. S00. Entorno de trabajo para el taller.ipynb
+++ b/Parte 2. S00. Entorno de trabajo para el taller.ipynb
@@ -8,13 +8,16 @@
     }
    },
    "source": [
-    "# Taller: Análisis de datos masivos con SparkR 2.0\n",
-    "### VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
-    "<center>[Soft Computing and Intelligent Information Systems](https://sci2s.ugr.es) | [Distributed Computational Intelligence and Time Series Lab](https://dicits.ugr.es) | [Universidad de Granada](http://www.ugr.es)</center>\n"
+    "<HR>"
    ]
   },
   {
@@ -57,26 +60,28 @@
     "jupyter notebook --notebook-dir=/root/TallerSparkR --no-browser --port=8888 --ip=0.0.0.0\n",
     "```\n",
     "\n",
-    "Esto hará que funcione JupyterNotebooks en el puerto 8888, por lo tenemos que acceder desde nuestro navegador web a la dirección: http://localhost:8888\n",
+    "Esto hará que funcione JupyterNotebooks en el puerto 8888, por lo tenemos que acceder desde nuestro navegador web a la dirección: http://localhost:25980    \n",
     "\n",
-    "En entorno que se ha elegido para el  desarrollo de las sesiones de trabajo en el taller de Spark + R es **Jupyter Notebook** en lugar de la herramienta RStudio.\n",
+    "¿Por qué es diferente el puerto donde se lanza Jupyter y la url? *En VirtualBox se ha redireccionado el puerto del 25980 al 8888.*\n",
+    "\n",
+    "En entorno que se ha elegido para el  desarrollo de las sesiones de trabajo en el taller de Spark + R es **Jupyter Notebook** en lugar de la herramienta **RStudio**.\n",
     "\n",
     "![AltJupyter](http://blog.jupyter.org/content/images/2015/02/jupyter-sq-text.png)\n",
     "\n",
     "Algunas de sus caracteriticas principales:\n",
     "\n",
-    "1. Jupyter Notebook es una aplicación Web que nos permite crear y compartir documentos que contienen código vivo, ecuaciones, textos, visualizaciones, etc. \n",
+    "1. Jupyter Notebook es **una aplicación Web en la nube** que nos permite crear y compartir documentos que contienen código vivo, ecuaciones, textos, visualizaciones, etc. \n",
     "\n",
-    "2. De esta forma podremos crear tutoriales interactivos, donde el lector pueda ir probando y comprobando en tiempo real aquellos conceptos o ejercicios que le vamos mostrando.\n",
+    "2. De esta forma podemos crear **tutoriales interactivos**, donde el lector pueda ir probando y comprobando en tiempo real aquellos conceptos o ejercicios que le vamos mostrando.\n",
     "\n",
-    "3. Se ejecuta \"en la nube\" por lo que no hay que instalar nada.\n",
+    "3. Se ejecuta **\"en la nube\"** por lo que no hay que instalar nada.\n",
     "\n",
     "\n",
     "El objeto más importante en jupyter es el **notebook**. \n",
     "\n",
     "Cada notebook está formado por un conjunto de **celdas** de contenido, donde el tipo de las mismas varía desde código hasta headings, pasando por markdown (para la inclusión de texto narrativo):\n",
     "\n",
-    "* Codigo fuente (de cualquier lenguaje, con excepciones)\n",
+    "* Codigo fuente (de cualquier lenguaje, con excepciones, siempre que sean interpretados)\n",
     "* Texto en formato MARKDOWN\n",
     "\n",
     "\n",
@@ -90,29 +95,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<HR>\n",
-    "# Zona de pruebas del NOTEBOOK en SparkR\n",
-    "![FooterSparkR](https://sites.google.com/site/manuparra/home/footer_SparkR_v2.png)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Escribe todas las pruebas en R que necesites a partir de aquí\n",
-    "\n",
-    "<HR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
    "source": [
-    "### Vamos a revisar la interfaz de usuario de **Jupyter Notebooks**"
+    "### Revisamos la interfaz de usuario de **Jupyter Notebooks**"
    ]
   },
   {
@@ -147,29 +134,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Primer ejemplo en R para Jupyter Notebooks"
+    "## Primer ejemplo en R para Jupyter Notebooks\n",
+    "\n",
+    "Utilizamos la zona de pruebas para trabajar con los Notebooks en Jupyter, R y SparkR."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<HR>\n",
+    "# Zona de pruebas del NOTEBOOK en SparkR\n",
+    "![FooterSparkR](https://sites.google.com/site/manuparra/home/footer_SparkR_v2.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Escribe todas las pruebas en R que necesites a partir de aquí\n",
+    "\n",
+    "<HR>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Vamos manos a la obra !\n",
-    "# Escribe tu codigo: "
+    "# Escribe tu codigo ! No te asustes !"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
