--- a/Parte 2. S01. Inicio del entorno de trabajo con SparkR.ipynb
+++ b/Parte 2. S01. Inicio del entorno de trabajo con SparkR.ipynb
@@ -8,13 +8,16 @@
     }
    },
    "source": [
-    "# Taller: Análisis de datos masivos con SparkR 2.0\n",
-    "### VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
-    "<center>[Soft Computing and Intelligent Information Systems](https://sci2s.ugr.es) | [Distributed Computational Intelligence and Time Series Lab](https://dicits.ugr.es) | [Universidad de Granada](http://www.ugr.es)</center>\n"
+    "<HR>"
    ]
   },
   {
@@ -207,7 +210,11 @@
     "* Ahora se usa sparkR.session() para arrancar la sesión con SparkR, en lugar de sparkR.init().\n",
     "* No se necesita un sparkContext para las funciones para crearDataFrame, read.json, cacheTables, read.df, ...\n",
     "* La función `registerTempTable` se ha reemplazado por `createOrReplaceTempView` para trabajar con SparkSQL.\n",
-    "* La función `dropTempTable` se ha cambiado por `dropTempView`."
+    "* La función `dropTempTable` se ha cambiado por `dropTempView`.\n",
+    "\n",
+    "### Software vivo y en continuo cambio\n",
+    "\n",
+    "* Es importante estar siempre informado de las mejoras y cambios que trae una u otra versión que se publica de SparkR, ya que posiblemente mejore aspectos como rendimiento, definiciones, flujos de trabajo, herramientas, etc."
    ]
   },
   {
