--- a/Parte 2. S03. Lectura y escritura de datos con SparkR.ipynb
+++ b/Parte 2. S03. Lectura y escritura de datos con SparkR.ipynb
@@ -4,13 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Taller: Análisis de datos masivos con SparkR 2.0\n",
-    "### VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
-    "<center>[Soft Computing and Intelligent Information Systems](https://sci2s.ugr.es) | [Distributed Computational Intelligence and Time Series Lab](https://dicits.ugr.es) | [Universidad de Granada](http://www.ugr.es)</center>\n"
+    "<HR>"
    ]
   },
   {
@@ -31,11 +34,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Attaching package: ‘SparkR’\n",
+      "\n",
+      "The following objects are masked from ‘package:stats’:\n",
+      "\n",
+      "    cov, filter, lag, na.omit, predict, sd, var, window\n",
+      "\n",
+      "The following objects are masked from ‘package:base’:\n",
+      "\n",
+      "    as.data.frame, colnames, colnames<-, drop, endsWith, intersect,\n",
+      "    rank, rbind, sample, startsWith, subset, summary, transform, union\n",
+      "\n",
+      "Spark package found in SPARK_HOME: /usr/local/spark/\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Launching java with spark-submit command /usr/local/spark//bin/spark-submit   --driver-memory \"1g\" sparkr-shell /tmp/RtmpNG9PTx/backend_port9184151c978 \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Java ref type org.apache.spark.sql.SparkSession id 1 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     ".libPaths(c(file.path(Sys.getenv(\"SPARK_HOME\"),\"R/lib/\"),.libPaths()))\n",
     "library(SparkR)\n",
@@ -46,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Hoy en día el trabajo con BigData parece que siempre está asociado al ecosistema HADOOP. Hace unos años esto significaba que si tu también eras un buen programador en JAVA, trabajar en tal entorno, incluso un simple programa para hacer un WORDCOUNT, implicaba varias docenas de líneas de código. \n",
+    "Hoy en día el trabajo con BigData parece que siempre está asociado al ecosistema HADOOP. Hace unos años esto significaba que si también eras un buen programador en JAVA, trabajar en tal entorno, incluso un simple programa para hacer un WORDCOUNT, implicaba varias docenas de líneas de código. \n",
     "\n",
     "Pero hace 3-4 años la cuestión ha cambiado gracias a Apache Spark con su API de estilo funcional. \n",
     "\n",
@@ -100,7 +139,7 @@
    "source": [
     "## Repositorio de Datasets para todo el taller\n",
     "\n",
-    "Todos los conjuntos de datos que vamos a tratar para el Taller se encuentran disponibles en el directorio ```datasets```. Para consultar, modificar y añadir datasets, ficheros, etc, puedes hacerlo usando el gestor de fichero de ```Jupyter``` accediendo al gestor de fichero desde:  http://localhost:25980/tree/datasets\n",
+    "Todos los conjuntos de datos que vamos a tratar para el Taller se encuentran disponibles en el directorio ```datasets```. Para consultar, modificar y añadir datasets, ficheros, etc, puedes hacerlo usando el gestor de fichero de ```Jupyter``` desde:  http://localhost:25980/tree/datasets\n",
     "\n",
     "<BR>"
    ]
@@ -130,13 +169,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<ol class=list-inline>\n",
+       "\t<li>'/root/TallerSparkR/datasets/csv/buy_05/buy_costumers_amazon05.csv'</li>\n",
+       "\t<li>'/root/TallerSparkR/datasets/csv/buy_costumers_amazon01.csv'</li>\n",
+       "\t<li>'/root/TallerSparkR/datasets/csv/buy_costumers_amazon02.csv'</li>\n",
+       "\t<li>'/root/TallerSparkR/datasets/csv/buy_costumers_amazon03.csv'</li>\n",
+       "\t<li>'/root/TallerSparkR/datasets/csv/buy_costumers_amazon04.csv'</li>\n",
+       "</ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item '/root/TallerSparkR/datasets/csv/buy\\_05/buy\\_costumers\\_amazon05.csv'\n",
+       "\\item '/root/TallerSparkR/datasets/csv/buy\\_costumers\\_amazon01.csv'\n",
+       "\\item '/root/TallerSparkR/datasets/csv/buy\\_costumers\\_amazon02.csv'\n",
+       "\\item '/root/TallerSparkR/datasets/csv/buy\\_costumers\\_amazon03.csv'\n",
+       "\\item '/root/TallerSparkR/datasets/csv/buy\\_costumers\\_amazon04.csv'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. '/root/TallerSparkR/datasets/csv/buy_05/buy_costumers_amazon05.csv'\n",
+       "2. '/root/TallerSparkR/datasets/csv/buy_costumers_amazon01.csv'\n",
+       "3. '/root/TallerSparkR/datasets/csv/buy_costumers_amazon02.csv'\n",
+       "4. '/root/TallerSparkR/datasets/csv/buy_costumers_amazon03.csv'\n",
+       "5. '/root/TallerSparkR/datasets/csv/buy_costumers_amazon04.csv'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"/root/TallerSparkR/datasets/csv/buy_05/buy_costumers_amazon05.csv\"\n",
+       "[2] \"/root/TallerSparkR/datasets/csv/buy_costumers_amazon01.csv\"       \n",
+       "[3] \"/root/TallerSparkR/datasets/csv/buy_costumers_amazon02.csv\"       \n",
+       "[4] \"/root/TallerSparkR/datasets/csv/buy_costumers_amazon03.csv\"       \n",
+       "[5] \"/root/TallerSparkR/datasets/csv/buy_costumers_amazon04.csv\"       "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "list.files(\"datasets/csv\",full.names = T,recursive = T)"
+    "list.files(\"/root/TallerSparkR/datasets/csv\",full.names = T,recursive = T)"
    ]
   },
   {
@@ -156,14 +236,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- id: integer (nullable = true)\n",
+      " |-- first_name: string (nullable = true)\n",
+      " |-- last_name: string (nullable = true)\n",
+      " |-- buy_hours: string (nullable = true)\n",
+      " |-- amount: double (nullable = true)\n",
+      " |-- credit_card: long (nullable = true)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "1000"
+      ],
+      "text/latex": [
+       "1000"
+      ],
+      "text/markdown": [
+       "1000"
+      ],
+      "text/plain": [
+       "[1] 1000"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<thead><tr><th scope=col>id</th><th scope=col>first_name</th><th scope=col>last_name</th><th scope=col>buy_hours</th><th scope=col>amount</th><th scope=col>credit_card</th></tr></thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1           </td><td>Julie       </td><td>Knight      </td><td>22:50       </td><td>2865.65     </td><td>3.003823e+13</td></tr>\n",
+       "\t<tr><td>2           </td><td>Frank       </td><td>Hernandez   </td><td>23:48       </td><td>3783.93     </td><td>3.577441e+15</td></tr>\n",
+       "\t<tr><td>3           </td><td>Andrew      </td><td>Patterson   </td><td>19:32       </td><td> 581.70     </td><td>3.546533e+15</td></tr>\n",
+       "\t<tr><td>4           </td><td>Charles     </td><td>Snyder      </td><td>9:44        </td><td>3257.08     </td><td>5.002359e+15</td></tr>\n",
+       "\t<tr><td>5           </td><td>Earl        </td><td>Little      </td><td>19:23       </td><td> 439.36     </td><td>5.048378e+15</td></tr>\n",
+       "\t<tr><td>6           </td><td>Pamela      </td><td>Torres      </td><td>16:00       </td><td>3773.75     </td><td>3.531928e+15</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "\\begin{tabular}{r|llllll}\n",
+       " id & first\\_name & last\\_name & buy\\_hours & amount & credit\\_card\\\\\n",
+       "\\hline\n",
+       "\t 1            & Julie        & Knight       & 22:50        & 2865.65      & 3.003823e+13\\\\\n",
+       "\t 2            & Frank        & Hernandez    & 23:48        & 3783.93      & 3.577441e+15\\\\\n",
+       "\t 3            & Andrew       & Patterson    & 19:32        &  581.70      & 3.546533e+15\\\\\n",
+       "\t 4            & Charles      & Snyder       & 9:44         & 3257.08      & 5.002359e+15\\\\\n",
+       "\t 5            & Earl         & Little       & 19:23        &  439.36      & 5.048378e+15\\\\\n",
+       "\t 6            & Pamela       & Torres       & 16:00        & 3773.75      & 3.531928e+15\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/plain": [
+       "  id first_name last_name buy_hours amount  credit_card \n",
+       "1 1  Julie      Knight    22:50     2865.65 3.003823e+13\n",
+       "2 2  Frank      Hernandez 23:48     3783.93 3.577441e+15\n",
+       "3 3  Andrew     Patterson 19:32      581.70 3.546533e+15\n",
+       "4 4  Charles    Snyder    9:44      3257.08 5.002359e+15\n",
+       "5 5  Earl       Little    19:23      439.36 5.048378e+15\n",
+       "6 6  Pamela     Torres    16:00     3773.75 3.531928e+15"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Sólo indicamos un fichero concreto .... No hay problema Spark es muy listo ! ;)\n",
-    "df <- read.df(\"datasets/csv/buy_costumers_amazon01.csv\", \"csv\", header = \"true\", inferSchema = \"true\")\n",
+    "df <- read.df(\"/root/TallerSparkR/datasets/csv/buy_costumers_amazon01.csv\", \"csv\", header = \"true\", inferSchema = \"true\")\n",
     "printSchema(df)\n",
     "count(df)\n",
     "head(df)"
