--- a/Parte 1. S01. Procesamiento de datos masivos.ipynb
+++ b/Parte 1. S01. Procesamiento de datos masivos.ipynb
@@ -8,10 +8,13 @@
     }
    },
    "source": [
-    "# Taller: Procesamiento de datos masivos con SparkR\n",
-    "### VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
     "<HR>"
@@ -25,7 +28,7 @@
     }
    },
    "source": [
-    "# Procesamiento de datos masivos con SparkR"
+    "# Procesamiento masivo de datos con SparkR"
    ]
   },
   {
@@ -47,9 +50,9 @@
     "collapsed": true
    },
    "source": [
-    "**Hola ! Si estás en este taller, es porque estás interesado en R y además no te conformas con procesar y analizar datos de poco tamaño; QUIERES PROCESAR DATOS DE FORMA MASIVA**\n",
+    "<span style='font-size:1.5em'>Hola ! Si estás en este taller, es porque estás interesado en R y además no te conformas con procesar y analizar datos de poco tamaño; Quieres procesar datos masivamente !!</span>\n",
     "\n",
-    "R es un popular lenguaje de programación estadística con una serie de extensiones que soportan el procesamiento de datos y tareas de aprendizaje automático. Sin embargo, el análisis interactivo de datos en R suele ser limitado, ya que el tiempo de ejecución R es de subproceso único y sólo puede procesar conjuntos de datos que se ajusten a la memoria de una sola máquina. Presentamos SparkR, un paquete R que proporciona un frontend a Apache Spark y utiliza el motor de cálculo distribuido de Spark para permitir el análisis de datos a gran escala desde el shell R. Describimos los principales objetivos de diseño de SparkR, discutimos cómo el API de DataFrame de alto nivel permite el cálculo escalable y presenta algunos de los detalles clave de nuestra implementación."
+    "<span style='font-size:1.2em'>R es un popular lenguaje de programación estadística con una serie de extensiones que soportan el procesamiento de datos y tareas de aprendizaje automático. Sin embargo, el análisis interactivo de datos en R suele ser limitado, ya que el tiempo de ejecución R es de subproceso único y sólo puede procesar conjuntos de datos que se ajusten a la memoria de una sola máquina. <BR><BR>Presentamos SparkR, un paquete R que proporciona un frontend a Apache Spark y utiliza el motor de cálculo distribuido de Spark para permitir el análisis de datos a gran escala desde el shell R. Describimos los principales objetivos de diseño de SparkR, discutimos cómo el API de DataFrame de alto nivel permite el cálculo escalable y presenta algunos de los detalles clave de nuestra implementación.</span>"
    ]
   },
   {
@@ -71,7 +74,7 @@
     "* R\n",
     "* ...\n",
     "\n",
-    "Todas ellas operan sobre una única máquina."
+    "Todas ellas operan sobre una única máquina, no conectadas o conectadas, con recursos limitados, etc."
    ]
   },
   {
@@ -142,6 +145,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Limitaciones de Hadoop y MapReduce:\n",
+    "\n",
+    "* Latencia para el acceso a datos.\n",
+    "* Cantidades grandes de ficheros pequeños.\n",
+    "* Escribe una vez, lee varias.\n",
+    "* No se puede acceder con los comandos tradicionales de Linux (ls, cat, vim...).\n",
+    "\n",
+    "En cuanto a MapReduce:\n",
+    "\n",
+    "* Es muy difícil de depurar: Al procesarse el programa en los nodos donde se encuentran los bloques de datos.\n",
+    "* **No todos los algoritmos se pueden escribir** con el paradigma MapReduce. Por ejemplo, el famoso algoritmo de grafos Dijkstra, al necesitar un procesamiento secuencial, no se puede escribir en MapReduce."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Motivación de Apache Spark"
    ]
   },
@@ -204,6 +224,21 @@
     "Procesamiento en Memoria, puede marcar gran diferencia\n",
     "\n",
     "![compare](https://sites.google.com/site/manuparra/home/inmemory.png)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Las ventajas principales de Spark:\n",
+    "\n",
+    "1. Una plataforma de código abierto con una comunidad activa\n",
+    "2. Una plataforma rápida \n",
+    "3. Una plataforma unificada para gestionar datos\n",
+    "4. Consola interactiva\n",
+    "5. Una gran API para trabajar con los datos\n"
    ]
   },
   {
