--- a/Parte 1. S02. R + Spark + Datos Masivos.ipynb
+++ b/Parte 1. S02. R + Spark + Datos Masivos.ipynb
@@ -8,10 +8,13 @@
     }
    },
    "source": [
-    "# Taller: Análisis de datos masivos con SparkR\n",
-    "### VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016\n",
+    "<span style='font-size:2.4em'>Procesamiento masivo de datos con SparkR</span>\n",
     "\n",
-    "**Manuel Jesús Parra Royón**\n",
+    "<span style='font-size:1.5em'>VIII Jornadas de usuarios de R. Albacete, Castilla-La Mancha, 17 y 18 de noviembre de 2016</span>\n",
+    "\n",
+    "Taller impartido por: <span style='font-size:1.2em'>Manuel Jesús Parra Royón</span>\n",
+    "\n",
+    "\n",
     "![Alt](https://sites.google.com/site/manuparra/home/logoparty.png)\n",
     "\n",
     "<HR>"
@@ -25,7 +28,7 @@
     }
    },
    "source": [
-    "# Taller de análisis de datos masivos con SparkR"
+    "# R + Spark + Big Data"
    ]
   },
   {
@@ -39,17 +42,6 @@
     "![Spark+R](https://sites.google.com/site/manuparra/home/SparkRlogo.png)\n",
     "\n",
     "<HR>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "collapsed": true
-   },
-   "source": [
-    "**Hola ! Si estás en este taller, es porque estás interesado en R y además no te conformas con procesar y analizar datos de poco tamaño; QUIERES PROCESAR DATOS DE FORMA MASIVA**\n",
-    "\n",
-    "Intro en Inglés: R is a popular statistical programming language with a number of extensions that support data processing and machine learning tasks. However, interactive data analysis in R is usually limited as the R runtime is single threaded and can only process data sets that fit in a single machine’s memory. We present SparkR, an R package that provides a frontend to Apache Spark and uses Spark’s distributed computation engine to enable large scale data analysis from the R shell. We describe the main design goals of SparkR, discuss how the high-level DataFrame API enables scalable computation and present some of the key details of our implementation."
    ]
   },
   {
@@ -189,7 +181,7 @@
     "collapsed": true
    },
    "source": [
-    "# Aplicación"
+    "# R sobre Spark: Aplicación"
    ]
   },
   {
@@ -208,6 +200,16 @@
     "**Large Scale Machine Learning**: \n",
     "\n",
     "Es necesario ejecutar algoritmos de Machine Learning sobre conjunto de datos masivos. El modelo ajustado es sustancialmente más pequeño que el tamaño de la entrada de datos, El modelo luego será utilizado para hacer las predicciones."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "<HR>\n",
+    "\n"
    ]
   },
   {
